--- a/app/views/admin/menus/index.html.erb
+++ b/app/views/admin/menus/index.html.erb
@@ -52,7 +52,7 @@
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
                         <li><%= link_to "Restaurant Menu", admin_menus_path %></li>
-                        <li class="active">Product Management</li>
+                        <li class="active">Food Management</li>
                     </ul>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                         <thead>
                             <tr>
                                 <th>Image</th>
-                                <th>Name Product</th>
+                                <th>Food Name</th>
                                 <th>Another Name</th>
                                 <th>Price</th>
                                 <th>Category</th>
@@ -92,7 +92,9 @@
                                     <td><%= link_to item.name_1, [:admin, item] %></td>
                                     <td><%= item.name_2 %></td>
                                     <td><%= number_with_delimiter item.price %></td>
-                                    <td>###</td>
+                                    <td>
+                                        ###
+                                    </td>
                                     <td><%= truncate(strip_tags(item.description), length: 50) %></td>
                                     <td><%= item.created_at.strftime("%d/%m/%Y") %></td>
                                     <td class="text-center">
