--- a/app/views/admin/menus/new.html.erb
+++ b/app/views/admin/menus/new.html.erb
@@ -52,8 +52,8 @@
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
                         <li><%= link_to "Restaurant Menu", admin_menus_path %></li>
-                        <li><%= link_to "Product Management", admin_menus_path %></li>
-                        <li class="active">New Product of Menu</li>
+                        <li><%= link_to "Food Management", admin_menus_path %></li>
+                        <li class="active">New Food of Menu</li>
                     </ul>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                         <!-- Basic layout-->
                         <div class="panel panel-flat">
                             <div class="panel-heading">
-                                <h5 class="panel-title">New Product of Menu</h5>
+                                <h5 class="panel-title">New Food of Menu</h5>
                                 <div class="heading-elements">
                                     <ul class="icons-list">
                                         <li><a data-action="collapse"></a></li>
