--- a/app/views/customer_mailer/customer_order_email.html.erb
+++ b/app/views/customer_mailer/customer_order_email.html.erb
@@ -34,7 +34,7 @@
                 <table class="table">
                   <thead>
                       <tr>
-                          <th>Product's Name</th>
+                          <th>Food Name</th>
                           <th>Price</th>
                           <th>Quantity</th>
                       </tr>
