--- a/app/views/admin/menus/show.html.erb
+++ b/app/views/admin/menus/show.html.erb
@@ -72,7 +72,7 @@
                             <div class="form-group">
                                 <%= label "", "Image: ", class: "control-label col-sm-2 text-semibold" %>
                                 <div class="col-sm-10">
-                                    <%= image_tag(@menu.image_url.image_product_large, alt: "Picture of Post", class: "img-rouded") %>
+                                    <%= image_tag(@menu.image_url.image_product_large, alt: "Picture of Food", class: "img-rouded") %>
                                 </div>
                             </div>
                             <div class="form-group">
