--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -72,6 +72,7 @@
                 <a href="#"><i class="fa fa-twitter"></i></a>
                 <a href="#"><i class="fa fa-pinterest"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
+                <div><a href="#">EN</a>/<a href="#">DE</a></div>
             </div>
             <!-- END / SOCIAL -->
         </nav>
