--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -52,9 +52,9 @@
                                                     <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
                                                 </div>
                                                 <div class="the-menu-body">
-                                                    <h4 class="xsm"><%= item.name_1 if !item.name_1.nil? %></h4>
-                                                    <% if !item.name_1.nil? %><p>+ <%= item.name_2 %></p><% end %>
-                                                    <% if !item.description.nil? %><em>+ <%= item.description %></em><% end %>
+                                                    <h4 class="xsm"><%= item.name_1 %></h4>
+                                                    <p>+ <%= item.name_2 %></p>
+                                                    <em>+ <%= item.description %></em>
                                                     <hr/>
                                                     <div><%= button_to 'Add to Cart', line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                                 </div>
@@ -87,9 +87,9 @@
                                                     <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
                                                 </div>
                                                 <div class="the-menu-body">
-                                                    <h4 class="xsm"><%= item.name_1 if !item.name_1.nil? %></h4>
-                                                    <% if !item.name_2.nil? %><p>+ <%= item.name_2 %></p><% end %>
-                                                    <% if !item.description.nil? %><em>+ <%= item.description %></em><% end %>
+                                                    <h4 class="xsm"><%= item.name_1 %></h4>
+                                                    <p>+ <%= item.name_2 %></p>
+                                                    <em>+ <%= item.description %></em>
                                                     <hr/>
                                                     <div><%= button_to 'Add to Cart', line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                                 </div>
@@ -125,14 +125,17 @@
                                     <!-- THE MENU ITEM -->
                                     <div class="col-lg-12">
                                         <div class="the-menu-item">
+                                            <div class="image-wrap">
+                                                <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                            </div>
                                             <div class="the-menu-body">
-                                                <h4 class="xsm"><%= item.name_1 if !item.name_1.nil? %></h4>
-                                                <% if !item.name_2.nil? %><p>+ <%= item.name_2 %></p><% end %>
-                                                <% if !item.description.nil? %><em>+ <%= item.description %></em><% end %>
+                                                <h4 class="xsm"><%= item.name_1 %></h4>
+                                                <p>+ <%= item.name_2 %></p>
+                                                <em>+ <%= item.description %></em>
                                                 <div><%= button_to 'Add to Cart', line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                             </div>
                                             <div class="prices">
-                                                <span class="price xsm"><%= item.price if item.price.nil? %></span>
+                                                <span class="price xsm"><%= item.price %></span>
                                             </div>
                                         </div>
                                     </div>
