--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -112,6 +112,6 @@
 <%= javascript_include_tag '/frontend/js/lib/jquery.magnific-popup.min.js' %>
 <%= javascript_include_tag '/frontend/js/lib/jquery.parallax-1.1.3.js' %>
 <%= javascript_include_tag '/frontend/js/lib/retina.min.js' %>
-<%= javascript_include_tag '/frontend/js/scripts.js' %>
+<%= javascript_include_tag '/frontend/js/scripts.js?v=1' %>
 
 </body>
