--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -25,8 +25,8 @@
     <%= favicon_link_tag '/frontend/images/logo-PhoSG52.png', rel: 'icon', type: 'image/png' %>
 
     <!-- PAGE STYLE -->
-    <%= stylesheet_link_tag '/frontend/css/style.css' %>
-    <%= stylesheet_link_tag '/frontend/stylesheets/custom.css' %>
+    <%= stylesheet_link_tag '/frontend/css/style.css?v=1' %>
+    <%= stylesheet_link_tag '/frontend/stylesheets/custom.css?v=1' %>
     <!--[if lt IE 9]>
         <%= javascript_include_tag 'http://html5shim.googlecode.com/svn/trunk/html5.js' %>
         <%= javascript_include_tag 'http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js' %>
