--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -73,7 +73,7 @@
                         <h4 class="lg text-uppercase">WE MAKE ALSO OTHER MEAL</h4>
                         <p class="text-justify">In Vietnam wird sie in den vielen Garküchen auf den Strassen rund um die Uhr als Frühstück, Mittags- oder Nachtimbiss gegessen. Eine gute Phở Bò verlangt bei der Zubereitung viel Zeit und viele Zutaten. Das Geheimnis der Phở ist die Würzmischung, die jeder Suppenkoch anders zusammenstellt.</p>
                         <p class="text-justify">Zutaten: Hausgemachte klare Rindbrühe mit breiten Reisnudeln, Rinderfilet, Zwiebeln, vietnamesischen Kräutern, Sojasprossen, dazu schmackhafte Rind-Bällchen.</p>
-                        <%= link_to "See menu", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default text-uppercase"} %>
+                        <%= link_to t(:see_menu), {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default text-uppercase"} %>
                     </div>
                 </div>
             </div>
