--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
                     <div class="slider-content text-center">
                         <div class="home-content">
                             <div class="ribbon ribbon-1">
-                                <h2 class="sm">WELCOME TO</h2>
+                                <h2 class="sm"><%=t :welcome_to %></h2>
                             </div>
                             <h1 class="sbig text-uppercase"><%= @info.name %></h1>
                             <div class="awe-hr">
