--- a/app/views/catering/index.html.erb
+++ b/app/views/catering/index.html.erb
@@ -40,7 +40,7 @@
                                     <p>Telefon: <%= @info.phone %> - Fax: <%= @info.fax %></p>
                                     <p>Email: <%= @info.email %></p>
                                     <p>Website: <%= link_to @info.website, @info.website, target: "_blank" %></p>
-                                    <p>See location: <%= link_to "here", "https://www.google.com/maps/place/Z%C3%BCrcherstrasse+91,+8952+Schlieren,+Thu%E1%BB%B5+S%C4%A9/@47.3981939,8.4569929,17z/data=!3m1!4b1!4m2!3m1!1s0x47900b8eb1097ab9:0x190058072b37d7a4", target: "_blank" %></p>
+                                    <p><%=t :see %> location: <%= link_to t(:here), "https://www.google.com/maps/place/Z%C3%BCrcherstrasse+91,+8952+Schlieren,+Thu%E1%BB%B5+S%C4%A9/@47.3981939,8.4569929,17z/data=!3m1!4b1!4m2!3m1!1s0x47900b8eb1097ab9:0x190058072b37d7a4", target: "_blank" %></p>
                                 </div>
                             </div>
                         </div>
