--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,9 +19,9 @@
             <div class="block-first">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <%= link_to image_tag("/frontend/images/flags/icon-uk.png"), "#" %>  <%= link_to image_tag("/frontend/images/flags/icon-german.png"), "#" %>
+                        <%= link_to image_tag("/frontend/images/flags/icon-uk.png"), home_path(locale: "en") %>  <%= link_to image_tag("/frontend/images/flags/icon-german.png"), home_path(locale: "de") %>
                         <h4>Take Away - Asia Buffet - <%= link_to "Catering", {controller: "catering", action: "index"} %> - Lieferung</h4>
-                        <%= link_to "GO TO THE WEBSITE", {controller: "home", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default"} %>
+                        <%= link_to t(:go_to_the_website), {controller: "home", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default"} %>
                     </div>
                 </div>
             </div>
