finish update cart

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -54,7 +54,7 @@
                                     
                                     <td class="product-quantity">
                                         <div class="quantity">
-                                            <input type="text" name="line_items[quantity]" value="<%= item.quantity %>" class="qty" >
+                                            <input type="text" name="quantities[<%= item.id %>]" value="<%= item.quantity %>" class="qty" >
                                         </div>
                                     </td>
                                     
