--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -89,7 +89,7 @@
                 <div class="cart-submit text-center">
                     <div class="form-actions">
                         <h4>Your shopping cart is empty</h4>
-                        <%= link_to "SHOPPING NOW", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-3 awe-btn-default text-uppercase"} %>
+                        <%= link_to "GO TO FOOD MENU", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-3 awe-btn-default text-uppercase"} %>
                     </div>
                 </div>
             <% end %>
