--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <!-- MAP -->
-            <div id="map" data-map-zoom="19" data-map-latlng="47.398197, 8.459163" data-snazzy-map-theme="grayscale" data-map-marker="<%= url_for("/images/map-here.png") %>" data-map-marker-size="35*60"></div>
+            <div id="map" data-map-zoom="17" data-map-latlng="47.398197, 8.459163" data-snazzy-map-theme="grayscale" data-map-marker="<%= url_for("/images/here.png") %>" data-map-marker-size="56*70"></div>
             <!-- END / MAP -->
         </div>
 
