--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -53,8 +53,8 @@
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
-                                                    <p>+ <%= item.name_2 %></p>
-                                                    <em>+ <%= item.description %></em>
+                                                    <p><%= item.name_2 %></p>
+                                                    <em><%= item.description %></em>
                                                     <hr/>
                                                     <div><%= button_to t(:add_to_cart), line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                                 </div>
@@ -88,8 +88,8 @@
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
-                                                    <p>+ <%= item.name_2 %></p>
-                                                    <em>+ <%= item.description %></em>
+                                                    <p><%= item.name_2 %></p>
+                                                    <em><%= item.description %></em>
                                                     <hr/>
                                                     <div><%= button_to 'Add to Cart', line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                                 </div>
@@ -130,8 +130,8 @@
                                             </div>
                                             <div class="the-menu-body">
                                                 <h4 class="xsm"><%= item.name_1 %></h4>
-                                                <p>+ <%= item.name_2 %></p>
-                                                <em>+ <%= item.description %></em>
+                                                <p><%= item.name_2 %></p>
+                                                <em><%= item.description %></em>
                                                 <div><%= button_to 'Add to Cart', line_items_path(menu_id: item), class: "btn btn-info" %></div>
                                             </div>
                                             <div class="prices">
