--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -24,7 +24,7 @@
             <br />
             
             <!-- NAV -->
-            <ul class="nav text-uppercase">
+            <ul class="nav text-uppercase font-menu-bold">
                 <li><%= link_to t(:home), {controller: "home", action: "index"} %></li>
                 <li><%= link_to t(:about), {controller: "about", action: "index"} %></li>
                 <li><%= link_to t(:menu), {controller: "menu", action: "index"} %></li>
