--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -49,7 +49,9 @@
                                         <div class="col-lg-12">
                                             <div class="the-menu-item">
                                                 <div class="image-wrap">
-                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                    <% if item.image_url? %>
+                                                        <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                    <% end %>
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
@@ -84,7 +86,9 @@
                                         <div class="col-lg-12">
                                             <div class="the-menu-item">
                                                 <div class="image-wrap">
-                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                    <% if item.image_url? %>
+                                                        <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                    <% end %>
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
@@ -126,7 +130,9 @@
                                     <div class="col-lg-12">
                                         <div class="the-menu-item">
                                             <div class="image-wrap">
-                                                <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                <% if item.image_url? %>
+                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
+                                                <% end %>
                                             </div>
                                             <div class="the-menu-body">
                                                 <h4 class="xsm"><%= item.name_1 %></h4>
