--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -106,3 +106,6 @@ header.header .navigation ul.nav li a {
 .minicart-wrap .toggle-minicart.active span {
     font-weight: 600;
 }
+.the-menu-item .the-menu-body .xsm {
+    font-weight: 600;
+}
