--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -39,7 +39,6 @@
                                             <h4>Phở Sài Gòn 52</h4>
                                         </div>
                                         <div class="item-event-content">
-                                            <p>Doner filet mignon bacon corned beef rump, frankfurter sirloin brisket drumstick kielbasa ribeye boudin pancetta prosciutto.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -63,7 +62,7 @@
                                             <h4>Gỏi cuốn Việt Nam</h4>
                                         </div>
                                         <div class="item-event-content">
-                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                                            <p>Reisnudeln, Salat, Sojasprossen, vietnamesischen Kräutern, dazu Hoi-sin.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +86,7 @@
                                             <h4>Bún bò nướng</h4>
                                         </div>
                                         <div class="item-event-content">
-                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
+                                            <p>In kurzen gebratenen Rindsfilet mit Zitronengras, serviert mit Reisnudeln.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -111,7 +110,6 @@
                                             <h4>Heo nướng</h4>
                                         </div>
                                         <div class="item-event-content">
-                                            <p>Flank landjaeger brisket leberkas bacon kielbasa shank meatball, fatback t-bone pork biltong boudin. Hamburger strip steak ribeye pastrami tenderloin.</p>
                                         </div>
                                     </div>
                                 </div>
