add gallery and gallery details

--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -8,6 +8,13 @@
     </ul>
 </li>
 <li>
+    <a href="#"><i class="icon-copy"></i> <span>Gallery Management</span></a>
+    <ul>
+        <li><%= link_to "Gallery Listing", admin_galleries_path %></li>
+        <li><%= link_to "Tags Management", admin_tags_path %></li>
+    </ul>
+</li>
+<li>
     <a href="#"><i class="icon-stack"></i> <span>Order, Reservation & Contact</span></a>
     <ul>
         <li><%= link_to "Orders Management", admin_customer_orders_path %></li>
@@ -28,9 +35,9 @@
         <li><%= link_to "Types Management", admin_types_path %></li>
     </ul>
 </li>-->
-<li>
+<!--<li>
     <a href="#"><i class="icon-people"></i> <span>User</span></a>
     <ul>
         <li><a href="#">Change Password</a></li>
     </ul>
-</li>
+</li>-->
